community/objects/Rate_Card_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Bill_Amount__c</fullName>
        <label>Additional Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Pay_Amount__c</fullName>
        <label>Additional Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Block_of_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Block of Time</label>
        <referenceTo>Block_of_Time__c</referenceTo>
        <relationshipLabel>Rate Card Details</relationshipLabel>
        <relationshipName>Rate_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_12_Bill_Rate__c</fullName>
        <label>Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_12_Pay_Rate__c</fullName>
        <label>Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_40_Bill_Rate__c</fullName>
        <label>Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_40_Pay_Rate__c</fullName>
        <label>Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_8_Bill_Rate__c</fullName>
        <label>Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_8_Pay_Rate__c</fullName>
        <label>Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Card_VMS_MSP_Fee_Hidden__c</fullName>
        <formula>Rate_Card__r.VMS_MSP_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Card VMS/MSP Fee % Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <label>Rate Card</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Card Details</relationshipLabel>
        <relationshipName>Rate_Card_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Regular_Bill_Rate__c</fullName>
        <label>Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Pay_Rate__c</fullName>
        <label>Regular Pay Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Type_Name_Hidden__c</fullName>
        <formula>Time_Type__r.Name</formula>
        <label>Time Type Name Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Type</label>
        <referenceTo>Time_Type__c</referenceTo>
        <relationshipLabel>Rate Card Details</relationshipLabel>
        <relationshipName>Rate_Card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate Card Detail</label>
    <nameField>
        <displayFormat>RCD-{MMDDYY}-{000}</displayFormat>
        <label>Rate Card Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Time_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Time_Type__c )</errorConditionFormula>
        <errorDisplayField>Time_Type__c</errorDisplayField>
        <errorMessage>Time Type cannot be changed after first save. You must delete this Rate Card Detail and create a new one to replace.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_edit_RCD_when_RC_locked</fullName>
        <active>true</active>
        <description>Cannot edit the Rate Card Detail when the Rate Card parent record is locked</description>
        <errorConditionFormula>Rate_Card__r.Locked__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot edit this Rate Card Detail, the parent Rate Card is locked. You must execute a Rate Change from the related Placement Report.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimeType_And_BoT_Both_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Block_of_Time__c),ISBLANK(Time_Type__c))</errorConditionFormula>
        <errorMessage>Time Type and Block of Time, both cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimeType_And_BoT_Both_Cannot_Be_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Block_of_Time__c)) ,NOT(ISBLANK( Time_Type__c )))</errorConditionFormula>
        <errorMessage>TimeType and Block of Time, both cannot be filled.</errorMessage>
    </validationRules>
</CustomObject>